--- a/stilo.css
+++ b/stilo.css
@@ -17,7 +17,7 @@ header{
     padding-bottom: 100px;
     text-align: center;
     background-color: #000;
-    box-shadow: 2px 2px 20px rgba(255,0,0, 0.46);
+    box-shadow: 2px 2px 10px rgba(99, 99, 99, 0.46);
     width: 100%;
     height: 40px;
     max-height: 50px;
@@ -51,13 +51,11 @@ header img:hover{
 }
 
 #marge {
-    margin-top: 150px;
     width: 130px;
     border: black solid;
     border-width: 10px;
     border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 150px auto 0px;
 }
 
 #header {
@@ -91,7 +89,7 @@ header img:hover{
 #imagens {
     display: none;  
     background-color: #fff;
-    box-shadow: 10px 10px 90px #000;
+    box-shadow: 5px 5px 40px rgba(0,0,0, 0.40);
     text-align: center;
     padding: 5px;
     margin-top: 10px;
@@ -120,7 +118,8 @@ img {
 }
 
 button {
-    border-radius: 5px;
+    border-radius: 6px;
+    padding: 2px;
 }
 
 button:hover{
@@ -132,11 +131,11 @@ button:hover{
     position: fixed;
     left: 30px;
     bottom: 40px;
-    transition: opacity 2s, visibility 3s;
 }
 
-#botao-topo:hover{
+#botao-topo img:hover{
     opacity: 80%;
+    transition: opacity 0.4s;
 }
 
 #botao-topo.show{
